deploy/azure/deploy_panorama/nsg.tf
resource "azurerm_network_security_group" "panorama" {
  name                = var.networkSecurityGroupName
  resource_group_name = azurerm_resource_group.resourcegroup.name
  location            = azurerm_resource_group.resourcegroup.location

  security_rule {
    name                       = "TCP-22"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = azurerm_network_interface.panorama.private_ip_address
  }
  security_rule {
    name                       = "TCP-443"
    priority                   = 110
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = "*"
    destination_address_prefix = azurerm_network_interface.panorama.private_ip_address
  }
  security_rule {
    name                       = "LoggingInbound"
    priority                   = 120
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_ranges    = ["444", "3978"]
    source_address_prefix      = "*"
    destination_address_prefix = azurerm_network_interface.panorama.private_ip_address
  }
  security_rule {
    name                       = "LoggingOutbound"
    priority                   = 100
    direction                  = "Outbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_ranges    = ["444", "3978"]
    source_address_prefix      = azurerm_network_interface.panorama.private_ip_address
    destination_address_prefix = "*"
  }
}
resource "azurerm_subnet_network_security_group_association" "panorama" {
  subnet_id                 = azurerm_subnet.panorama.id
  network_security_group_id = azurerm_network_security_group.panorama.id
}
